...
            ) {
                Icon(
                    imageVector = Icons.Rounded.Add,
                    contentDescription = "add note",
                )
//                            Spacer(modifier = )
                Text("Add Note")
            }
        },
    ) { padding ->
        Box(
            modifier = Modifier.padding(padding),
        ) {
            LazyColumn(
                state = state,
                contentPadding = PaddingValues(16.dp),
                verticalArrangement = Arrangement.spacedBy(16.dp),
                modifier = Modifier
                    .testTag("main:list"),
            ) {
                item {
                    // Spacer(Modifier.windowInsetsTopHeight(WindowInsets.safeDrawing))
                }
                when (mainState) {
                    is Result.Loading -> item {
...
